soapybladerf (0.1.2) unstable; urgency=low

  * Fix readStreamStatus() timeout infinite loop condition

 -- Josh Blum <josh@pothosware.com>  Wed, 16 Sep 2015 01:34:58 -0700

soapybladerf (0.1.1) unstable; urgency=low

  * Fix undefined behavior with bladerf_sync_rx() minimum timeout
  * Clip read/write number of samples to conversion buffer size
  * Arbitrary sized conversion buffers based on buffer size
  * Fix find function serial string to use null terminator
  * Support use of BLADERF_META_FLAG_TX_UPDATE_TIMESTAMP flag
  * Remove BLADERF_META_FLAG_TX_BURST_END padding (2015.07)

 -- Josh Blum <josh@pothosware.com>  Sat, 15 Aug 2015 11:18:36 -0700

soapybladerf (0.1.0) unstable; urgency=low

  * Release 0.1.0 (2015-07-13)

 -- Josh Blum <josh@pothosware.com>  Mon, 13 Jul 2015 22:02:57 -0700